[package]
name = "wepledge-nfts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arloader = "0.1.55"
glob = "0.3.0"
serde = "1.0.136"
serde_json = "1.0.78"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", ] }